<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ControleRemoto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="btn_top">Top</string>
    <string name="btn_botton">Botton</string>
    <string name="btn_right">Right</string>
    <string name="btn_left">Left</string>
	
    <string name="btn_A">A</string>
    <string name="btn_B">B</string>
    <string name="btn_X">X</string>
    <string name="btn_Z">Z</string>
    

</resources>
